--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
         <h1>Testing Narrator</h1>
 
 
-    <!-- embed video: -->
-    <video width="50%" controls src="./Media/20240529_065710.mp4">
-        <track src="./captions.vtt" kind="captions" default>
-</video>
 
 
+<h2>Testing web page with Narrator (Windows)</h2>
+<p>If you're on Windows PC, press CTRL + Windows button + Enter</p>
+<p></p>
 
-<h2>Rules for web accessibility:</h2>
+<hr>
 
+<h2>Web Accessibility solutions:</h2>
         <ul>
                 <li>Provide text alternatives for non-text content.</li>
                 <li>Ensure that all functionality is available from a keyboard.</li>
@@ -29,7 +29,7 @@
         </ul>
 
 
-
+<hr>
 <h2>Testing Accessibility:</h2>
         <ol>
                 <li>Use a screen reader to navigate and interact with the web page.</li>
@@ -39,12 +39,17 @@
                 <li>Test the web page on different devices and screen sizes to ensure responsiveness.</li>
         </ol>
 
-
+<hr>
 
         <img src="./Media/colors-768691_1920.jpg" alt="image to test if narrator will read it" width="50%">
 
 
+<hr>
 
+    <!-- embed video: -->
+    <video width="50%" controls src="./Media/20240529_065710.mp4">
+        <track src="./captions.vtt" kind="captions" default>
+</video>
 
 
 
